Change to see which site is loaded under robertnickel.online

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="heading">
                 TL;DR </p>
             <h1 class="title">
-                Me in 7 seconds
+                Robert in 7 seconds
             </h1>
             <br><br>
             <p class="profile-comment">I am</p>
