--- a/doing.html
+++ b/doing.html
@@ -16,7 +16,20 @@
         <a href="/doing.html">\\\ doing</a>
     </div>
     <br>
-
+    <div id="masters-degree" class="article-box">
+        <br><br>
+        <p class="heading">
+            Masters Degree
+        </p>
+        <h1 class="title">
+            Im doing my masters degree right now
+        </h1>
+        <p class="signature">October 28, 2020</p>
+        <p class="text">
+            four years as a Software Engineer at Daimler TSS GmbH in Ulm and Stuttgart. This month I started studying computer
+            science with focus on software engineering at the HTWG Konstanz. So far, I really like it.
+        </p>
+    </div>
     <div id="this-page" class="article-box">
         <br><br>
         <p class="heading">
