--- a/doing.html
+++ b/doing.html
@@ -26,12 +26,14 @@
         </h1>
         <p class="signature">October 28, 2020</p>
         <p class="text">
+            After finishing my bachelor of science in "Computitional Visualistics and Design" in 2016 I worked for well over
             four years as a Software Engineer at Daimler TSS GmbH in Ulm and Stuttgart. This month I started studying computer
             science with focus on software engineering at the HTWG Konstanz. So far, I really like it.
         </p>
     </div>
     <div id="this-page" class="article-box">
-        <br><br>
+        <hr>
+        <br>
         <p class="heading">
             Recursion
         </p>
