Updated being.html with reformulation of the last sentence and typo fix.

--- a/being.html
+++ b/being.html
@@ -90,8 +90,7 @@
             <p class="text">
                 I see a lot of unneccessarily repeated mistakes (that originate
                 from unproductive mindsets) in the process of software engineering and do address them with the same amount of work as
-                coding itself. I believe many companies need botton-up change, and that the implications of software
-                building are not intuitive to non-technical people, may they be project managers or agile coaches.
+                coding itself. I believe in bottom-up change and the non-intuitiveness of agile software craftsmanship.
             </p>
         </div>
     </div>
