Added buy ☕ button to header and made it expand automatically when its content does-

--- a/thinking.html
+++ b/thinking.html
@@ -14,6 +14,7 @@
         <a href="/being.html">\\\ being</a>
         <a href="/thinking.html">\\\ thinking</a>
         <a href="/doing.html">\\\ doing</a>
+        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
 
