Added coffee to index and shortened texts.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="/being.html">\\\ being</a>
         <a href="/thinking.html">\\\ thinking</a>
         <a href="/doing.html">\\\ doing</a>
+        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
     <br>
@@ -34,11 +35,13 @@
                     engineering (M. Sc.)</a>,
             </p>
             <p>slow thinker and unfrequent blogger about
-                software quality.</p>
+                software engineering, quality and the process.</p>
             <br>
-            <p><a href="/being.html">More details about me here.</a></p>
-            <p><a href="/doing.html">Here is what I do right now.</a></p>
-            <p><a href="/thinking.html">Finally my software engineering blog.</a></p>
+            <p><a href="/being.html">Details about me.</a></p>
+            <p><a href="/doing.html">What I do right now.</a></p>
+            <p><a href="/thinking.html">Software engineering blog.</a></p>
+            <p><a href="https://ko-fi.com/robertnickel">Support my work.</a></p>
+
         </div>
     </div>
     <br><br><br>
