--- a/doing.html
+++ b/doing.html
@@ -27,8 +27,10 @@
         </h1>
         <p class="signature">October 28, 2020</p>
         <p class="text">
-            After finishing my bachelor of science in "Computitional Visualistics and Design" in 2016 I worked for well over
-            four years as a Software Engineer at Daimler TSS GmbH in Ulm and Stuttgart. This month I started studying computer
+            After finishing my bachelor of science in "Computitional Visualistics and Design" in 2016 I worked for well
+            over
+            four years as a Software Engineer at Daimler TSS GmbH in Ulm and Stuttgart. This month I started studying
+            computer
             science with focus on software engineering at the HTWG Konstanz. So far, I really like it.
         </p>
     </div>
@@ -130,6 +132,25 @@
         </ul>
         <p class="text">You can find the <a href="https://github.com/Robert-Nickel/schedule-bot">source code
                 here</a>.</p>
+    </div>
+    <br>
+    <div id="mob-programming" class="article-box">
+        <hr>
+        <br>
+        <p class="heading">
+            Mob Programming
+        </p>
+        <h1 class="title">
+            I talked about Mob Programming
+        </h1>
+        <p class="signature">September 07, 2018</p>
+        <p class="text">
+            A lightning talk @ Fullstackfest 2018 Barcelona.
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/B-2Nn2TOo0A?start=841" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+            I confused the words "Requirement" and "Prerequisite", shame on me.
     </div>
     <br>
     <div class="footer">
