--- a/doing.html
+++ b/doing.html
@@ -144,12 +144,12 @@
         </h1>
         <p class="signature">September 07, 2018</p>
         <p class="text">
-            A lightning talk @ Fullstackfest 2018 Barcelona.
             <iframe width="560" height="315" src="https://www.youtube.com/embed/B-2Nn2TOo0A?start=841" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
             </iframe>
-            I confused the words "Requirement" and "Prerequisite", shame on me.
+            <br>
+            A lightning talk @ Fullstackfest 2018 Barcelona, and yes, I confused the words "Requirement" and "Prerequisite". Shit happens.
     </div>
     <br>
     <div class="footer">
