Added BDD essay

--- a/doing.html
+++ b/doing.html
@@ -17,8 +17,32 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
+    <div id="this-page" class="article-box">
+        <br>
+        <br>
+        <p class="heading">
+            Behavior-Driven Development
+        </p>
+        <h1 class="title">
+            TDD to BDD - Principles and Tools with an Impact on Business Value and Communications
+        </h1>
+        <p class="signature">December 05, 2020</p>
+        <p class="text">
+            For the module "Agile Procedure Models" at my university, I write an essay about BDDs origin,
+            principles, advantages, evaluation and outlook.
+            Since we need to hand in a PDF version and a markdown version, I decided to go the extra mile and have a
+            always up-to-date version of it hosted as Github Pages website here:
+            <a href="https://bdd.guru">bdd.guru</a>, so that I can receive early feedback from other readers and the
+            professor.
+
+            I then realised, that it is generic enough to use it for all future essays and thesis', so I extracted a
+            template repository which makes it really easy to get started with a new paper, export it as HTML and host
+            it as Github Pages website and export it as PDF using pandoc and the latex pdf engine with minimal effort.
+            <a href="https://github.com/Robert-Nickel/paper">Find it on Github</a> to experience the same ease.
+        </p>
+    </div>
     <div id="masters-degree" class="article-box">
-        <br><br>
+        <hr><br>
         <p class="heading">
             Masters Degree
         </p>
@@ -149,7 +173,8 @@
                 allowfullscreen>
             </iframe>
             <br>
-            A lightning talk @ Fullstackfest 2018 Barcelona, and yes, I confused the words "Requirement" and "Prerequisite". Shit happens.
+            A lightning talk @ Fullstackfest 2018 Barcelona, and yes, I confused the words "Requirement" and
+            "Prerequisite". Shit happens.
     </div>
     <br>
     <div class="footer">
