--- a/doing.html
+++ b/doing.html
@@ -24,7 +24,7 @@
             Behavior-Driven Development
         </p>
         <h1 class="title">
-            TDD to BDD<br>- Principles and Tools with an Impact on Business Value and Communications
+            TDD to BDD<br>-<br>Principles and Tools with an Impact on Business Value and Communications
         </h1>
         <p class="signature">December 05, 2020</p>
         <p class="text">
@@ -34,7 +34,7 @@
             always up-to-date version of it hosted as Github Pages website here:
             <a href="https://bdd.guru">bdd.guru</a>, so that I can receive early feedback from other readers and the
             professor.
-            <br>
+            <br><br>
             I then realised, that it is generic enough to use it for all future essays and thesis', so I extracted a
             template repository which makes it really easy to get started with a new paper, export it as HTML and host
             it as Github Pages website and export it as PDF using pandoc and the latex pdf engine with minimal effort.
