--- a/doing.html
+++ b/doing.html
@@ -37,7 +37,8 @@
             <br><br>
             I then realised, that it is generic enough to use it for all future essays and thesis', so I extracted a
             template repository which makes it really easy to get started with a new paper, export it as HTML and host
-            it as Github Pages website and export it as PDF using pandoc and the latex pdf engine with minimal effort.
+            it as Github Pages website with every commit and additionally export it as PDF using pandoc and the latex
+            pdf engine with minimal effort.
             <a href="https://github.com/Robert-Nickel/paper">Find it on Github</a> to experience the same ease.
         </p>
     </div>
