--- a/thinking.html
+++ b/thinking.html
@@ -17,9 +17,67 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
+    <div id="software-lumberjacks" class="article-box">
+        <br>
+        <br>
+        <p class="heading">
+            A lumberjack metaphor
+        </p>
+        <h1 class="title">
+            Software Engineers are Lumberjacks,<br> Features are Trees
+        </h1>
+        <p class="signature">By Robert Nickel - December 18, 2020</p>
+        <p class="text">
+            To illustrate 12 very important aspects of agile software engineering, I want to use the oversimplified
+            metaphor of lumberjacking. A forester, which represents the product owner, leads a team of lumberjacks, which is the
+            development team, to the most important trees to cut down. The trees represent features or stories.
 
+            How is this metaphor valuable?
+        <ol>
+            <li> <a href="https://robertnickel.online/thinking#segregating-responsibility">Segregation of
+                    responsibility</a>: One marks the trees to cut, the other define how and do cut them.</li>
+            <li> The lumberjacks who have the strength, skills and tools to cut down trees, although not everyone is on
+                the same level of experience, so they help each other out. Some trees can be cut alone, others need to
+                be cut together.</li>
+            <li> The forester pays the team of lumberjacks to cut down trees, so that he can futher explore the infinite
+                forest of valuable trees.
+            </li>
+            <li> In order to collaborate, mutual respect for the counterparts discipline is required. Discussions and
+                proposals are valuable and humbleness is a prerequisite, but the circles of competence are known and
+                respected.
+            </li>
+            <li> The lumberjacks are able to state concerns: It could be dangerous to cut down a tree, because of
+                uncertainty where the tree will fall. Risks, depending on what is on the line (another tree? A human?),
+                need to be evaluated strategically and should be reduced on the long run.</li>
+            <li> The forester can ask questions: Do you think, we can chop this tree safely already, or do we
+                need to chop another tree first?</li>
+            <li> CYA concerns are resolved easier: It is either the wrong tree, or it is the wrong way to cut it down.
+            </li>
+            <li> No one is perfect: Sometimes a tree is mouldy (=> wrong feature), sometimes the chopping takes longer
+                than expected (=> unexpected technical complexity).</li>
+            <li>Some trees are in the way and need to be cut down in order to get to the 'good' trees.</li>
+            <li> The forester doesn't tell the lumberjacks to sharpen their chainsaw or axes (=> write tests, update
+                IDE's etc.): They know and do it themselves, better than the forester could. They will do it within the
+                working hours.</li>
+            <li> It is dangerous to cut trees. It is important to have safety precautions and stick to them (=> QA).
+            </li>
+            <li> After a tree is chopped, the work is not done (=> definition of done): It needs to be cut into smaller
+                pieces and carried away. Then the wood goes trough a number of processes (=> build pipeline) in order to
+                be made valuable. Sometimes the value is to give shelter, craft furniture or build a ship, sometimes it
+                just gives comfy warmth in front of a fireplace. The foresters intention might materialize here (=>
+                business value).
+            </li>
+        </ol>
+
+        To be honest, I do not know so much about lumberjacking or foresting, so forgive my oversimplification and maybe
+        misconceptions. The goal is to write about software engineering metaphorically, and I find some concepts easy to
+        understand using this wooden examples. I have a more detailled and less metaphorical article about the <a
+            href="https://robertnickel.online/thinking#segregating-responsibility">segregation of responsibility
+            here</a>.
+        </p>
+    </div>
     <div id="closing-feedback-loops" class="article-box">
-        <br><br>
+        <hr><br>
         <p class="heading">
             Closing feedback loops
         </p>
