Tuned index, updated adress, fixed wording.

--- a/impressum.html
+++ b/impressum.html
@@ -11,8 +11,8 @@
         <div class='text'>
             <p>Angaben gem&auml;&szlig; &sect; 5 TMG</p>
             <p>Robert Nickel <br>
-                Austra&szlig;e 45<br>
-                70376 Stuttgart <br>
+                Scheffelstra&szlig;e 46<br>
+                78315 Radolfzell <br>
             </p>
             <p> <strong>Vertreten durch: </strong><br>
                 Robert Nickel<br>
