--- a/thinking.html
+++ b/thinking.html
@@ -62,7 +62,7 @@
             <li> It is dangerous to cut trees. It is important to have safety precautions and stick to them (=> QA).
             </li>
             <li> After a tree is chopped, the work is not done (=> definition of done): It needs to be cut into smaller
-                pieces and carried away. Then the wood goes trough a number of processes (=> build pipeline) in order to
+                pieces and carried away. Then the wood goes trough a number of procedures (=> build pipeline) in order to
                 be made valuable. Sometimes the value is to give shelter, craft furniture or build a ship, sometimes it
                 just gives comfy warmth in front of a fireplace. The foresters intention might materialize here (=>
                 business value).
