--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
     <div class="article-box">
         <div class="profile">
             <p class="heading">
-                TL;DR </p>
+                TLDR </p>
             <h1 class="title">
-                Robert in 7 seconds
+                Me in 7 seconds
             </h1>
             <br><br>
-            <p class="profile-comment">I am</p>
             <p>
                 Robert Nickel, former software engineer,</p>
-            <p>now student of <a href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
-                    engineering (M. Sc.)</a>,
+            <p>now master student of <a
+                    href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
+                    engineering</a>,
             </p>
-            <p>slow thinker and unfrequent blogger about
-                software engineering, quality and the process.</p>
-            <br>
-            <p><a href="/being.html">Details about me.</a></p>
-            <p><a href="/doing.html">What I do right now.</a></p>
-            <p><a href="/thinking.html">Software engineering blog.</a></p>
-            <p><a href="https://ko-fi.com/robertnickel">Support my work.</a></p>
+            <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile software
+                engineering.</p>
+            <br><br>
+            <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
+            <div class="signpost"><a href="/being.html">Person</a></div><br>
+            <div class="signpost"><a href="/doing.html">Projects</a></div><br>
+            <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
 
         </div>
     </div>
