Changed navigation naming.

--- a/doing.html
+++ b/doing.html
@@ -11,13 +11,14 @@
 
 <body>
     <div class="header">
-        <a href="/being.html">\\\ being</a>
-        <a href="/thinking.html">\\\ thinking</a>
-        <a href="/doing.html">\\\ doing</a>
+        <a href="/index.html">\\\ Home</a>
+        <a href="/being.html">\\\ Profile</a>
+        <a href="/thinking.html">\\\ Blog</a>
+        <a href="/doing.html">\\\ Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
-    <div id="this-page" class="article-box">
+    <div id="bdd" class="article-box">
         <br><br>
         <p class="heading">
             Behavior-Driven Development
@@ -28,11 +29,11 @@
         <p class="signature">December 05, 2020</p>
         <p class="text">
             For the module "Agile Procedure Models" at my university, I write an essay about BDDs origin,
-            principles, advantages, evaluation and outlook.
+            principles, advantages, evaluation and how to approach it.
             Since we need to hand in a PDF version and a markdown version, I decided to go the extra mile and have a
             always up-to-date version of it hosted as Github Pages website here:
             <a href="https://bdd.guru">bdd.guru</a>, so that I can receive early feedback from other readers and the
-            professor.
+            professor. Please send me a mail (robert.nickel@aikq.de) if you have any feedback for me.
             <br><br>
             I then realised, that it is generic enough to use it for all future essays and thesis', so I extracted a
             template repository which makes it really easy to get started with a new paper, export it as HTML and host
