--- a/thinking.html
+++ b/thinking.html
@@ -11,9 +11,10 @@
 
 <body>
     <div class="header">
-        <a href="/being.html">\\\ being</a>
-        <a href="/thinking.html">\\\ thinking</a>
-        <a href="/doing.html">\\\ doing</a>
+        <a href="/index.html">\\\ Home</a>
+        <a href="/being.html">\\\ Profile</a>
+        <a href="/thinking.html">\\\ Blog</a>
+        <a href="/doing.html">\\\ Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
