--- a/thinking.html
+++ b/thinking.html
@@ -30,10 +30,10 @@
         <p class="signature">By Robert Nickel - December 18, 2020</p>
         <p class="text">
             To illustrate 12 very important aspects of agile software engineering, I want to use the oversimplified
-            metaphor of lumberjacking. A forester, which represents the product owner, leads a team of lumberjacks, which is the
-            development team, to the most important trees to cut down. The trees represent features or stories.
-
-            How is this metaphor valuable?
+            metaphor of lumberjacking. A forester, which represents the product owner, leads a team of lumberjacks,
+            which is the development team, to the most important trees to cut down. The trees represent features or
+            stories. How is this metaphor valuable?
+        </p>
         <ol>
             <li> <a href="https://robertnickel.online/thinking#segregating-responsibility">Segregation of
                     responsibility</a>: One marks the trees to cut, the other define how and do cut them.</li>
@@ -63,18 +63,20 @@
             <li> It is dangerous to cut trees. It is important to have safety precautions and stick to them (=> QA).
             </li>
             <li> After a tree is chopped, the work is not done (=> definition of done): It needs to be cut into smaller
-                pieces and carried away. Then the wood goes trough a number of procedures (=> build pipeline) in order to
+                pieces and carried away. Then the wood goes trough a number of procedures (=> build pipeline) in order
+                to
                 be made valuable. Sometimes the value is to give shelter, craft furniture or build a ship, sometimes it
                 just gives comfy warmth in front of a fireplace. The foresters intention might materialize here (=>
                 business value).
             </li>
         </ol>
 
-        To be honest, I do not know so much about lumberjacking or foresting, so forgive my oversimplification and maybe
-        misconceptions. The goal is to write about software engineering metaphorically, and I find some concepts easy to
-        understand using this wooden examples. I have a more detailled and less metaphorical article about the <a
-            href="https://robertnickel.online/thinking#segregating-responsibility">segregation of responsibility
-            here</a>.
+        <p class="text"> To be honest, I do not know so much about lumberjacking or foresting, so forgive my
+            oversimplification and maybe misconceptions. The goal is to write about software engineering metaphorically,
+            and I find some concepts easy to understand using this wooden examples. I have a more detailled and less
+            metaphorical article about the <a
+                href="https://robertnickel.online/thinking#segregating-responsibility">segregation of responsibility
+                here</a>.
         </p>
     </div>
     <div id="closing-feedback-loops" class="article-box">
