--- a/thinking.html
+++ b/thinking.html
@@ -30,7 +30,7 @@
         <p class="signature">By Robert Nickel - December 18, 2020</p>
         <p class="text">
             To illustrate 12 very important aspects of agile software engineering, I want to use the oversimplified
-            metaphor of lumberjacking. A forester, which represents the product owner, leads a team of lumberjacks,
+            metaphor of lumberjacking. A forester, who represents the product owner, leads a team of lumberjacks,
             which is the development team, to the most important trees to cut down. The trees represent features or
             stories. How is this metaphor valuable?
         </p>
