--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="header">
         <a href="/index.html">\\\ Home</a>
-        <a href="/being.html">\\\ Profile</a>
-        <a href="/thinking.html">\\\ Blog</a>
-        <a href="/doing.html">\\\ Projects</a>
+        <a href="/blog.html">\\\ Blog</a>
+        <a href="/profile.html">\\\ Profile</a>
+        <a href="/projects.html">\\\ Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
