--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,7 @@
             always up-to-date version of it hosted as Github Pages website here:
             <a href="https://bdd.guru">bdd.guru</a>, so that I can receive early feedback from other readers and the
             professor. Please send me a mail (robert.nickel@aikq.de) if you have any feedback for me.
+            <br><b>Update: The paper is done and is worth reading, feedback is still valuable to me.</b>
             <br><br>
             I then realised, that it is generic enough to use it for all future essays and thesis', so I extracted a
             template repository which makes it really easy to get started with a new paper, export it as HTML and host
