--- a/doing.html
+++ b/doing.html
@@ -1,6 +1,6 @@
 <html>
 <script>
-    window.location.href = "http://robertnickel.online/projects" + "#" + urlSplit[1];
+    window.location.href = "https://robertnickel.online/projects";
 </script>
 
 </html>
