--- a/being.html
+++ b/being.html
@@ -1,13 +1,6 @@
 <html>
 <script>
-
-    var urlSplit = document.URL.split("#");
-    if (urlSplit[1]) {
-        window.location.href = "http://robertnickel.online/profile" + "#" + urlSplit[1];
-    }
-    else {
-        location.href = "http://robertnickel.online/profile";
-    }
+    window.location.href = "https://robertnickel.online/profile";
 </script>
 
 </html>
