--- a/thinking.html
+++ b/thinking.html
@@ -3,10 +3,10 @@
 
     var urlSplit = document.URL.split("#");
     if (urlSplit[1]) {
-        window.location.href = "http://robertnickel.online/blog" + "#" + urlSplit[1];
+        window.location.href = "https://robertnickel.online/blog" + "#" + urlSplit[1];
     }
     else {
-        location.href = "http://robertnickel.online/blog";
+        window.location.href = "https://robertnickel.online/blog";
     }
 </script>
 
