--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
-    <div id="software-lumberjacks" class="article-box">
+    <div id="a-lumberjack-metaphor" class="article-box">
         <br>
         <br>
         <p class="heading">
