--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
             <li> The forester pays the team of lumberjacks to cut down trees, so that he can futher explore the infinite
                 forest of valuable trees.
             </li>
-            <li> In order to collaborate, mutual respect for the counterparts discipline is required. Discussions and
+            <li> In order to collaborate, mutual respect for the counterpart's discipline is required. Discussions and
                 proposals are valuable and humbleness is a prerequisite, but the circles of competence are known and
                 respected.
             </li>
