--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
 
         <p class="text"> To be honest, I do not know so much about lumberjacking or foresting, so forgive my
             oversimplification and maybe misconceptions. The goal is to write about software engineering metaphorically,
-            and I find some concepts easy to understand using this wooden examples. I have a more detailled and less
+            and I find some concepts easy to understand using these wooden examples. I have a more detailled and less
             metaphorical article about the <a
                 href="https://robertnickel.online/thinking#segregating-responsibility">segregation of responsibility
                 here</a>.
