--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
                 forest of valuable trees.
             </li>
             <li> In order to collaborate, mutual respect for the counterpart's discipline is required. Discussions and
-                proposals are valuable and humbleness is a prerequisite, but the circles of competence are known and
+                proposals are valuable and humility is a prerequisite, but the circles of competence are known and
                 respected.
             </li>
             <li> The lumberjacks are able to state concerns: It could be dangerous to cut down a tree, because of
