Avoid line breaks within menu entries, Added extra newline to render home better on mobile.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <body>
     <div class="header">
-        <a href="/index.html">\\\ Home</a>
-        <a href="/blog.html">\\\ Blog</a>
-        <a href="/profile.html">\\\ Profile</a>
-        <a href="/projects.html">\\\ Projects</a>
-        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
+        <a href="/index.html">\\\&nbsp;Home</a>
+        <a href="/blog.html">\\\&nbsp;Blog</a>
+        <a href="/profile.html">\\\&nbsp;Profile</a>
+        <a href="/projects.html">\\\&nbsp;Projects</a>
+        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
+    <br>
     <br>
     <br>
     <div class="article-box">
@@ -42,7 +43,6 @@
             <div class="signpost"><a href="/being.html">Person</a></div><br>
             <div class="signpost"><a href="/doing.html">Projects</a></div><br>
             <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
-
         </div>
     </div>
     <br><br><br>
