--- a/blog.html
+++ b/blog.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="header">
-        <a href="/index.html">\\\ Home</a>
-        <a href="/blog.html">\\\ Blog</a>
-        <a href="/profile.html">\\\ Profile</a>
-        <a href="/projects.html">\\\ Projects</a>
-        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
+        <a href="/index.html">\\\&nbsp;Home</a>
+        <a href="/blog.html">\\\&nbsp;Blog</a>
+        <a href="/profile.html">\\\&nbsp;Profile</a>
+        <a href="/projects.html">\\\&nbsp;Projects</a>
+        <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
     <br>
     <div id="a-lumberjack-metaphor" class="article-box">
