--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <div class="header">
         <a href="/index.html">\\\&nbsp;Home</a>
         <a href="/blog.html">\\\&nbsp;Blog</a>
@@ -19,36 +20,37 @@
         <a href="/projects.html">\\\&nbsp;Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
-    <br><br><br><br>
-    <div class="article-box">
-        <div class="profile">
-            <p class="heading">
-                TLDR </p>
-            <h1 class="title">
-                Me in 7 seconds
-            </h1>
-            <br><br>
-            <p>
-                Robert Nickel, former software engineer,</p>
-            <p>now master student of <a
-                    href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
-                    engineering</a>,
-            </p>
-            <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile software
-                engineering.</p>
-            <br><br>
-            <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
-            <div class="signpost"><a href="/being.html">Person</a></div><br>
-            <div class="signpost"><a href="/doing.html">Projects</a></div><br>
-            <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
+
+    <div style="padding-top: 6em;">
+        <div class="article-box">
+            <div class="profile">
+                <p class="heading">
+                    TLDR </p>
+                <h1 class="title">
+                    Me in 7 seconds
+                </h1>
+                <br><br>
+                <p>
+                    Robert Nickel, former software engineer,</p>
+                <p>now master student of <a
+                        href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
+                        engineering</a>,
+                </p>
+                <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile
+                    software
+                    engineering.</p>
+                <br><br>
+                <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
+                <div class="signpost"><a href="/being.html">Person</a></div><br>
+                <div class="signpost"><a href="/doing.html">Projects</a></div><br>
+                <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
+            </div>
         </div>
     </div>
-    <br><br><br>
     <div class="footer">
         <a class="profile-comment" href="impressum.html">Impressum</a> ||
         <a class="profile-comment" href="dsgvo.html">Data Protection</a>
     </div>
 </body>
-
 
 </html>
