--- a/index.html
+++ b/index.html
@@ -21,30 +21,28 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
 
-    <div style="padding-top: 6em;">
-        <div class="article-box">
-            <div class="profile">
-                <p class="heading">
-                    TLDR </p>
-                <h1 class="title">
-                    Me in 7 seconds
-                </h1>
-                <br><br>
-                <p>
-                    Robert Nickel, former software engineer,</p>
-                <p>now master student of <a
-                        href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
-                        engineering</a>,
-                </p>
-                <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile
-                    software
-                    engineering.</p>
-                <br><br>
-                <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
-                <div class="signpost"><a href="/being.html">Person</a></div><br>
-                <div class="signpost"><a href="/doing.html">Projects</a></div><br>
-                <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
-            </div>
+    <div class="article-box" style="padding-top: 6em;">
+        <div class="profile">
+            <p class="heading">
+                TLDR </p>
+            <h1 class="title">
+                Me in 7 seconds
+            </h1>
+            <br><br>
+            <p>
+                Robert Nickel, former software engineer,</p>
+            <p>now master student of <a
+                    href="https://www.htwg-konstanz.de/en/master/computer-science/at-a-glance/">software
+                    engineering</a>,
+            </p>
+            <p>slow thinker, <a href="https://ko-fi.com/robertnickel">coffee guy</a> and blogger about agile
+                software
+                engineering.</p>
+            <br><br>
+            <div class="signpost"><a href="/thinking.html">Blog</a></div><br>
+            <div class="signpost"><a href="/being.html">Person</a></div><br>
+            <div class="signpost"><a href="/doing.html">Projects</a></div><br>
+            <div class="signpost"><a href="https://ko-fi.com/robertnickel">Support me</a></div>
         </div>
     </div>
     <div class="footer">
