--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,9 @@
             For the module "Agile Procedure Models" at my university, I write an essay about BDDs origin,
             principles, advantages, evaluation and how to approach it.
             Since we need to hand in a PDF version and a markdown version, I decided to go the extra mile and have a
-            always up-to-date version of it hosted as Github Pages website here:<br>
-            <b><a href="https://bdd.guru">bdd.guru</a></b><br>, so that I can receive early feedback from other readers and the
+            always up-to-date version of it hosted as Github Pages website here: <b><a
+                    href="https://bdd.guru">bdd.guru</a></b>,<br> so that I can receive early feedback from other
+            readers and the
             professor. Please send me a mail (robert.nickel@aikq.de) if you have any feedback for me.
             <br><b>Update: The paper is done and is worth reading, feedback is still valuable to me.</b>
             <br><br>
