--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,8 @@
                     href="https://bdd.guru">bdd.guru</a></b>,<br> so that I can receive early feedback from other
             readers and the
             professor. Please send me a mail (robert.nickel@aikq.de) if you have any feedback for me.
-            <br><b>Update: The paper is done and is worth reading, feedback is still valuable to me.</b>
+            <br><b>Update: <a href="https://github.com/Robert-Nickel/bdd.guru/blob/master/00_Nickel_BDD.pdf">The paper
+                    is done.</a> I think it is worth reading. Feedback is still valuable to me.</b>
             <br><br>
             I then realised, that it is generic enough to use it for all future essays and thesis', so I extracted a
             template repository which makes it really easy to get started with a new paper, export it as HTML and host
@@ -55,10 +56,8 @@
         <p class="signature">October 28, 2020</p>
         <p class="text">
             After finishing my bachelor of science in "Computitional Visualistics and Design" in 2016 I worked for well
-            over
-            four years as a Software Engineer at Daimler TSS GmbH in Ulm and Stuttgart. This month I started studying
-            computer
-            science with focus on software engineering at the HTWG Konstanz. So far, I really like it.
+            over four years as a Software Engineer at Daimler TSS GmbH in Ulm and Stuttgart. This month I started
+            studying computer science with focus on software engineering at the HTWG Konstanz. So far, I really like it.
         </p>
     </div>
     <div id="this-page" class="article-box">
