--- a/blog.html
+++ b/blog.html
@@ -39,10 +39,8 @@
             <li> <a href="https://robertnickel.online/thinking#segregating-responsibility">Segregation of
                     responsibility</a>: One marks the trees to cut, the others define how and do cut them.</li>
             <li> The lumberjacks who have the strength, skills and tools to cut down trees, although not everyone is
-                on
-                the same level of experience, so they help each other out. Some trees can be cut alone, others need
-                to
-                be cut together.</li>
+                on the same level of experience, so they help each other out. Some trees can be cut alone, others need
+                to be cut together.</li>
             <li> The forester pays the team of lumberjacks to cut down trees, so that he can futher explore the
                 infinite
                 forest of valuable trees.
