--- a/blog.html
+++ b/blog.html
@@ -57,8 +57,8 @@
             <b>Conclusion</b>: At least 36 people in Sydney have the exact same amount of hair.
             <br><br>
             I believe there are many real world situations, in which the pigeonhole principle makes a lot of sense, and
-            I cannot wait to stumble across some of them. To be honest: For this example, it would be more effective of
-            count (or estimate) the bald people, assuming they are the biggest group with the same amount of hair.
+            I cannot wait to stumble across some of them. To be honest: For this example, it would be more effective to
+            count (or estimate) the amount of bald people, assuming they are the biggest group with the same amount of hair.
             <br><br>
             <b>Homework</b>: At my wedding we had 125 guests. There were 6 different main courses and 3 different side
             dishes,
