Added a zynical definition of doing agile.

--- a/blog.html
+++ b/blog.html
@@ -18,8 +18,30 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\ buy ☕</a>
     </div>
     <br>
-    <div id="a-lumberjack-metaphor" class="article-box">
+    <div id="zynical-doing-agile" class="article-box">
         <br>
+        <br>
+        <p class="heading">
+            zynical: doing agile
+        </p>
+        <h1 class="title">
+            Doing agile,<br>
+            a zynical definition
+        </h1>
+        <p class="signature">By Robert Nickel - December 29, 2020</p>
+        <p class="text">
+            <b>Doing agile:</b>
+            Understanding, that every team member is selfish, has poor communication skills and insufficient knowledge
+            to solve an undefined problem (everyone pretends to understand) in a predictable amount of time. Shifting
+            the focus from believing the experts and their plans to learning, experimenting and repeatedly checking
+            something is done that might be useful. <b>Important</b>: Everyone should have a opinion about everything,
+            because someone in management decided we are all fullstack developers now. Basically, it is just like
+            searching the light switch in a dark room, taking small steps and trying to not step on lego. And sometimes,
+            in veeery rare cases, we will even work together to find it.
+        </p>
+    </div>
+    <div id="a-lumberjack-metaphor" class="article-box">
+        <hr>
         <br>
         <p class="heading">
             A lumberjack metaphor
