--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
             Understanding, that every team member is selfish, has poor communication skills and insufficient knowledge
             to solve an undefined problem (everyone pretends to understand) in a predictable amount of time. Shifting
             the focus from believing the experts and their plans to learning, experimenting and repeatedly checking
-            something is done that might be useful. <b>Important</b>: Everyone should have an opinion about everything,
+            something is done that might be useful. <b>Important</b>: Everyone should have an opinion on everything,
             because someone in management decided we are all fullstack developers now. Basically, it is just like
             searching the light switch in a dark room, taking small steps and trying to not step on lego. And sometimes,
             in veeery rare cases, we will even work together to find it.
