--- a/blog.html
+++ b/blog.html
@@ -36,8 +36,8 @@
             the focus from believing the experts and their plans to learning, experimenting and repeatedly checking
             something is done that might be useful. <b>Important</b>: Everyone should have an opinion on everything,
             because someone in management decided we are all fullstack developers now. Basically, it is just like
-            searching the light switch in a dark room, taking small steps and trying to not step on lego. And sometimes,
-            in veeery rare cases, we will even work together to find it.
+            searching the light switch in a dark room, taking small steps and trying to not step on lego. And sometimes
+            we will even work together to find it.
         </p>
     </div>
     <div id="pigeonhole-principle" class="article-box">
