--- a/blog.html
+++ b/blog.html
@@ -31,13 +31,15 @@
         <p class="signature">By Robert Nickel - December 29, 2020</p>
         <p class="text">
             <b>Doing agile:</b>
-            Understanding, that every team member is selfish, has poor communication skills and insufficient knowledge
-            to solve an undefined problem (everyone pretends to understand) in a predictable amount of time. Shifting
-            the focus from believing the experts and their plans to learning, experimenting and repeatedly checking
-            something is done that might be useful. <b>Important</b>: Everyone should have an opinion on everything,
-            because someone in management decided we are all fullstack developers now. Basically, it is just like
-            searching the light switch in a dark room, taking small steps and trying to not step on lego. And sometimes
-            we will even work together to find it.
+            We do understand, that every team member is selfish, has poor communication skills and insufficient
+            knowledge to solve an undefined problem that everyone pretends to understand in a predictable amount of
+            time.<br><br>
+            Therefore we are shifting the focus from believing the experts and their plans to learning, experimenting
+            and repeatedly checking something is done that might be useful. Our collaboration goes beyond everyone
+            stating an opinion, so we need to listen to each other now. And we do pair programming, e.g. if one of us is
+            too tired to program alone.<br><br>
+            But we dont do documentation, because we value working software more. And remember: Someone in the
+            management said recently, that we are all fullstack developers now! 🎉
         </p>
     </div>
     <div id="pigeonhole-principle" class="article-box">
