Fixed TERRIBLE typo.

--- a/blog.html
+++ b/blog.html
@@ -18,15 +18,15 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
     <br>
-    <div id="zynical-doing-agile" class="article-box">
+    <div id="cynical-doing-agile" class="article-box">
         <br>
         <br>
         <p class="heading">
-            zynical: doing agile
+            cynical: doing agile
         </p>
         <h1 class="title">
             Doing agile,<br>
-            a zynical definition
+            a cynical definition
         </h1>
         <p class="signature">By Robert Nickel - December 29, 2020</p>
         <p class="text">
