--- a/blog.html
+++ b/blog.html
@@ -35,11 +35,11 @@
             knowledge to solve an undefined problem that everyone pretends to understand in a predictable amount of
             time.<br><br>
             Therefore we are shifting the focus from believing the experts and their plans to learning, experimenting
-            and repeatedly checking something is done that might be useful. Our collaboration goes beyond everyone
-            stating an opinion, so we need to listen to each other now. And we do pair programming, e.g. if one of us is
-            too tired to program alone.<br><br>
-            But we dont do documentation, because we value working software more. And remember: Someone in the
-            management said recently, that we are all fullstack developers now! 🎉
+            and repeatedly checking something useful gets done. Our collaboration goes beyond everyone
+            stating an opinion while covering their ass, so we need to listen to each other now. And we do pair
+            programming, e.g. if one of us is too tired to program alone.<br><br>
+            But we don't do documentation, because we value working software more, right?.<br> And remember: Someone in
+            the management said recently, that we are all fullstack developers now! 🎉
         </p>
     </div>
     <div id="pigeonhole-principle" class="article-box">
