--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,9 @@
             and repeatedly checking something useful gets done. Our collaboration goes beyond everyone
             stating an opinion while covering their ass, so we need to listen to each other now. And we do pair
             programming, e.g. if one of us is too tired to program alone.<br><br>
-            But we don't do documentation, because we value working software more, right? And remember: Someone in
-            the management said recently, that we are all fullstack developers now! 🎉
+            But we don't do documentation, because we value working software more. And remember: Someone in
+            the management said recently, that we are all fullstack developers now, so everyone can have an opinion an
+            anything now! 🎉
         </p>
     </div>
     <div id="pigeonhole-principle" class="article-box">
