--- a/blog.html
+++ b/blog.html
@@ -35,12 +35,9 @@
             knowledge to solve an undefined problem that everyone pretends to understand in a predictable amount of
             time.<br><br>
             Therefore we are shifting the focus from believing the experts and their plans to learning, experimenting
-            and repeatedly checking something useful gets done. Our collaboration goes beyond everyone
-            stating an opinion while covering their ass, so we need to listen to each other now. And we do pair
-            programming, e.g. if one of us is too tired to program alone.<br><br>
-            But we don't do documentation, because we value working software more. And remember: Someone in
-            the management said recently, that we are all fullstack developers now, so everyone can have an opinion an
-            anything now! 🎉
+            and repeatedly checking something useful gets done. And we do test-driven SAFe T-shaped daily pair
+            programming Kanban with our Scrum PO.<br><br>
+            P.S. We don't do documentation, because we value working software more.
         </p>
     </div>
     <div id="pigeonhole-principle" class="article-box">
