--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
         content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="alternate" type="application/atom+xml" title="Blog of Robert Nickel" href="/feed.xml">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         <a href="/profile.html">\\\&nbsp;Profile</a>
         <a href="/projects.html">\\\&nbsp;Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
+        <a style="float: right" class="btn btn-rss" href="/feed.xml" target="_blank">\\\ RSS</a>
     </div>
     <br>
     <div id="cynical-doing-agile" class="article-box">
