Added <article> tag to the latest post to see if it can be identified by the rss feed plugin then.

--- a/blog.html
+++ b/blog.html
@@ -20,28 +20,31 @@
         <a style="float: right" class="btn btn-rss" href="/feed.xml" target="_blank">\\\ RSS</a>
     </div>
     <br>
-    <div id="cynical-doing-agile" class="article-box">
-        <br>
-        <br>
-        <p class="heading">
-            cynical: doing agile
-        </p>
-        <h1 class="title">
-            Doing agile,<br>
-            a cynical definition
-        </h1>
-        <p class="signature">By Robert Nickel - December 29, 2020</p>
-        <p class="text">
-            <b>Doing agile:</b>
-            We do understand, that every team member is selfish, has poor communication skills and insufficient
-            knowledge to solve an undefined problem that everyone pretends to understand in a predictable amount of
-            time.<br><br>
-            Therefore we are shifting the focus from believing the experts and their plans to learning, experimenting
-            and repeatedly checking something useful gets done. And we do test-driven SAFe T-shaped daily pair
-            programming Kanban with our Scrum PO.<br><br>
-            P.S. We don't do documentation, because we value working software more.
-        </p>
-    </div>
+    <article>
+        <div id="cynical-doing-agile" class="article-box">
+            <br>
+            <br>
+            <p class="heading">
+                cynical: doing agile
+            </p>
+            <h1 class="title">
+                Doing agile,<br>
+                a cynical definition
+            </h1>
+            <p class="signature">By Robert Nickel - December 29, 2020</p>
+            <p class="text">
+                <b>Doing agile:</b>
+                We do understand, that every team member is selfish, has poor communication skills and insufficient
+                knowledge to solve an undefined problem that everyone pretends to understand in a predictable amount of
+                time.<br><br>
+                Therefore we are shifting the focus from believing the experts and their plans to learning,
+                experimenting
+                and repeatedly checking something useful gets done. And we do test-driven SAFe T-shaped daily pair
+                programming Kanban with our Scrum PO.<br><br>
+                P.S. We don't do documentation, because we value working software more.
+            </p>
+        </div>
+    </article>
     <div id="pigeonhole-principle" class="article-box">
         <hr>
         <br>
